# html2pptx

./: .gitignore  CLAUDE.md  README.md  create_core_loop.py  html_to_pptx.py  pyproject.toml  run.bat  run.sh
presentazione_html/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
