[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "html2pptx"
version = "0.2.0"
description = "Convert HTML slides to native PowerPoint shapes via Playwright + python-pptx."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Alfio Caprino"}]
keywords = ["pptx", "powerpoint", "html", "playwright", "presentation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business",
]
dependencies = [
    "playwright>=1.40,<2",
    "python-pptx>=0.6.21,<1",
    "lxml>=4.9,<6",
]

[project.scripts]
html2pptx = "html_to_pptx:main"

[project.urls]
Homepage = "https://github.com/acaprino/html2pptx"

[tool.setuptools]
py-modules = ["html_to_pptx"]
